<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="100sp"
        android:layout_marginTop="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/oneButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/twoButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/threeButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/fourButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/fiveButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/sixButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/sevenButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/eightButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                style="@style/Widget.AppCompat.Button"
                android:text="@string/nineButton"
                android:onClick="buttonClicked"
                android:textSize="42sp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </TableRow>

        <Button
            style="@style/Widget.AppCompat.Button"
            android:text="@string/clearButton"
            android:onClick="clearSum"
            android:textSize="34sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="34sp" />

    </TableLayout>


</android.support.v7.widget.LinearLayoutCompat>